# text_editor

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  Makefile  boyerMoore.cpp  boyerMoore.hpp  boyerMooreTest.cpp  fileHandler.cpp  fileHandler.hpp  main.cpp  my_tests  tests.sh  text_editor
